# hb-strategy-sandbox

./: .claude  .claude_ci_trigger.tmp  .codecov.yml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.md  README.md  WORKSPACE.md  benchmark-results.json  coverage.xml  mkdocs.yml  pyproject.toml
.claude/commands/: AG_CI_analyzer.md
.claude/commands/references/: AG_examples.md  AG_tools_reference.md  AG_workflows.md
.github/workflows/: advanced-ci.yml  ci.yml  dev-integration.yml  docs.yml  feature-branch.yml  release.yml  security.yml
.workspace/: component_classification.toml  migration_guide.md  validation_results.json  workspace.template.toml
.workspace/scripts/: validate_current_state.py
docs/: ci-optimization-guide.md  ci-optimization-validation.md  index.md  reference.md
docs/ci-pipeline/: api-reference.md  overview.md  troubleshooting.md
docs/ci-pipeline/developer-guide/: architecture.md  extending-the-pipeline.md
docs/ci-pipeline/user-guide/: interpreting-reports.md  performance-benchmarking.md  security-scanning.md
docs/strategy-sandbox/: core-concepts.md  examples.md  getting-started.md  introduction.md
examples/: simple_strategy_example.py
framework/: README.md  __init__.py  cli.py
framework/docs/: API.md  CLI.md  EXAMPLES.md
framework/maintenance/: __init__.py  cli.py  health_monitor.py  maintenance_config.yaml  scheduler.py
framework/performance/: alert_config.yaml  cli.py  collector.py  models.py  trend_analyzer.py
framework/reporting/: __init__.py  artifact_manager.py  cli.py  github_reporter.py  report_generator.py  template_engine.py
framework/security/: __init__.py  analyzer.py  cli.py  collector.py  dashboard_generator.py  models.py  sbom_generator.py
framework/tests/: __init__.py  test_cli.py
framework/tests/integration/: __init__.py  test_framework_integration.py
framework/tests/maintenance/: __init__.py  test_framework_health_monitor.py  test_health_monitor.py  test_maintenance_integration.py  test_maintenance_scheduler.py
framework/tests/performance/: __init__.py  test_cli.py  test_framework_collector.py  test_framework_comparator.py  test_performance_collector.py  test_performance_comparator.py  test_trend_analyzer.py
framework/tests/property/: __init__.py  test_framework_property.py
framework/tests/reporting/: __init__.py  test_report_generator.py  test_reporting_integration.py  test_template_engine.py
framework/tests/security/: test_cli.py  test_framework_analyzer.py  test_framework_collector.py  test_security_integration.py
scripts/: compare-benchmarks.py  dev-workflow.sh  quick-benchmark.py
strategy_sandbox/: __about__.py  __init__.py
strategy_sandbox/balance/: __init__.py  manager.py
strategy_sandbox/core/: __init__.py  environment.py  protocols.py
strategy_sandbox/data/: __init__.py  providers.py
strategy_sandbox/events/: __init__.py  system.py
strategy_sandbox/integration/: __init__.py
strategy_sandbox/maintenance/: __init__.py  cli.py  health_monitor.py  maintenance_config.yaml  scheduler.py
strategy_sandbox/markets/: __init__.py  exchange_simulator.py
strategy_sandbox/performance/: __init__.py  alert_config.yaml  cli.py  collector.py  comparator.py  models.py  performance_thresholds.yaml  schema.py  trend_analyzer.py
strategy_sandbox/reporting/: __init__.py  artifact_manager.py  cli.py  github_reporter.py  report_generator.py  template_engine.py
strategy_sandbox/security/: __init__.py  analyzer.py  cli.py  collector.py  dashboard_generator.py  models.py  sbom_generator.py
strategy_sandbox/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  ci_simulator.py  test_ci_pipeline.py
tests/integration/: __init__.py  test_integration_simple.py  test_maintenance_integration.py
tests/performance/: __init__.py  test_benchmarks.py
tests/security/: test_dashboard_generator.py
tests/unit/: test_artifact_manager.py  test_basic_cli_coverage.py  test_basic_functionality.py  test_core_protocols.py  test_data_providers.py  test_events_system.py  test_github_reporter.py  test_health_monitor.py  test_maintenance_cli.py  test_maintenance_scheduler.py  test_market_dynamics.py  test_performance_cli.py  test_performance_collector.py  test_performance_comparator.py  test_report_generator.py  test_reporting_cli.py  test_sandbox_environment.py  test_sbom_generator.py  test_security_analyzer.py  test_security_cli.py  test_security_collector.py  test_security_models.py  test_strategy_sandbox_init.py  test_strategy_sandbox_init_coverage.py  test_template_engine.py  test_trend_analyzer.py
